Update css to align descriptions correctly

--- a/my-website/styles/Projects.module.css
+++ b/my-website/styles/Projects.module.css
@@ -48,6 +48,15 @@ html{
 
 }
 
+.projectDescription ul {
+    padding-left: 1rem;
+    margin: 0;
+}
+
+.projectDescription li {
+    margin-left: 0;
+}
+
 /* Mobile responsive...kinda */
 @media (max-width: 1000px){
     .heading{
